[package]

name = "client"
version = "0.0.1"
authors = ["csguest"]

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.nice_glfw]
git = "https://github.com/cmr/nice_glfw.git"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.cgmath]
git = "http://github.com/bjz/cgmath-rs"

[dependencies.net]
git = "http://github.com/osiris-game/net"
